<resources>
    <string name="app_name">Apple Disease Indentification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--content Descriptions-->
    <string name="on_navigation_to_location_description">bottom navigation bar for your saved locations</string>
    <string name="on_navigation_to_data_description">bottom navigation bar for your saved data</string>
    <string name="on_navigation_to_camera_classification_description">bottom navigation bar for your model inference classification</string>

    <!--labels-->
    <string name="locations_label">Locations</string>
    <string name="your_diseases_label">Data</string>
    <string name="classification_camera">Classify</string>

    <string name="disease_name">Apple Scab</string>
    <string name="disease_caption">this disease is from fungus that is so rare in some countries but in europe its so common so to stop this you should read on our blog and learn what diseases
    to use in order to get rid of these diseases by using different fungicids that are recommended in our blogs so i encourage you to go through it and learn a lot i hope you are happy with the
    description of this disease that was classified</string>


    <string name="exampleDiseaseNames">
        Apple scab : 0.00 "\n"
        Apple_cedar_rust : 0.00"\n"
        Apple_black_rot : 0.00
    </string>
    <string name="disease_type">Atom Pomi</string>

    <!--START
    Signup string extracted-->
    <string name="hello_user_welcome_to_my_app_press_the_button_below_to_signup_with_google_hint">Hello User welcome, please sign up by pressing the button below to sign up with google account</string>
    <string name="no_user_signed_in">you are not signed in please click sign in to use this app </string>
    <string name="after_sign_out_msg">You have signed out Please sign in with google  account</string>
    <string name="user_email">email :</string>
    <string name="user_name">user name :</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="sign_up_with_email">Sign Up Now!!!</string>
    <string name="example_hint_email">Email</string>
    <string name="example_user_hint">Example Example</string>
    <string name="hint">Take care for our environment by using less pesticides, and be more efficient</string>
    <string name="sign_up_login_textView">Or login</string>
    <string name="plant_management">Plant Management</string>
    <!--END-->

    <!--START
    this is for the transactions screens-->
    <string name="overview">Overview</string>
    <string name="transactions">Transactions</string>
    <string name="ins">Incomes</string>
    <string name="outs">Expenses</string>
    <string name="transaction">transaction</string>
    <string name="total_balance">Total Balance</string>
    <string name="test_value">257.000,00 MKD</string>
    <!--END-->

    <!-- START
    This is for the dialog -->
    <string name="product_name">* Specify the Product Name 🍎 </string>
    <string name="mass_of_product_sold">* mass of product sold </string>
    <string name="unit_price_per_kg_l">* unit price per kg/l € </string>
    <string name="additional_description_on_transaction">description on transaction  👀</string>
    <string name="transaction_type">* transaction type</string>
    <string name="client_name">Client name 🧑🏽 </string>
    <string name="save_transaction">Save transaction</string>
    <string name="edit">Edit</string>
    <string name="create">Create</string>
    <string name="long_message">Are you sure you want to Exit  ? 🤔</string>
    <string name="delete_transaction_message">Are you sure you want delete transaction:  </string>
    <string name="decline">Decline 🤷‍♂</string>
    <string name="accept">Yes‍♂</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="transaction_details_select_date_hint">dd/mm/yyyy 🗓</string>
    <string name="field_info_text">All Fields specified with * must be filled</string>
    <string name="all_transactions">Transactions</string>
    <string name="edit_fab_content_description">setting transactions in a edition mode</string>
    <string name="creating_a_new_transaction_description">creating a new transaction fab</string>
    <string name="extendable_fab_content_description">fab that will open 2 other fab to create a new transaction and to edit the transactions in the list</string>
    <string name="refresh">Refresh</string>


    <string name="pesticides_and_insecticides">Pesticides And Insecticides</string>
    <string name="save_result_from_analyze">Save result</string>


    <string name="pesticide_name_hint">Pesticide Name</string>
    <string name="active_ingredients_hint">Active Ingredients</string>
    <string name="preparate_type_hint">Preparate Type</string>


    <string name="transaction_amount_hint">236.000,00</string>
    <string name="transaction_date_hint">29/07/2021</string>
    <string name="transaction_product_name_hint">Apples</string>

    <!-- START
    This is for signup Screen -->
    <string name="sign_in_create_your_account_textView">Create your account :</string>
    <string name="sign_in_password_textView">Password</string>
    <string name="sign_in_re_enter_password_textView">Re-enter password</string>
    <string name="sign_in_with_textView">Sign in with :</string>
    <!--END-->

    <!-- START
    This is for transaction Details Screen strings-->
    <string name="save_floating_action_button">Save floating action button</string>
    <string name="edit_floating_action_button">Edit floating action button</string>
    <string name="transaction_details_product_type_hint">Product type 🍎</string>
    <string name="transaction_details_id_hint">ID 📑</string>
    <string name="transaction_details_price">price €</string>
    <string name="transaction_details_mass">Mass ⚖</string>
    <string name="transaction_details_client_name">Client Name 🧑🏽</string>
    <string name="user_profile_content_description">User profile content description</string>
    <string name="take_photo">take photo \n</string>
    <string name="start_capture">capture \n\n</string>
    <!--END-->

    <string-array name="transaction_options">
        <item>Incomes</item>
        <item>Expenses</item>
    </string-array>
    <!--END-->
</resources>
