<?xml version="1.0" encoding="utf-8"?>
<layout >

    <data>
        <variable
            name="signUpViewModel"
            type="com.zanoapp.applediseaseIdentification.uiController.authenticationFirebase.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".uiController.userProfileData.UserProfileDataFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/staticUserEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="18dp"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/user_email"
            android:layout_marginTop="33dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dynamicUserEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/staticUserEmailTextView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="18dp"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@{signUpViewModel.user.email}"
            android:hint="@string/example_hint_email"
            android:layout_marginTop="33dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/staticUserNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/staticUserEmailTextView"
            android:layout_marginStart="18dp"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/user_name"
            android:layout_marginTop="33dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dynamicUserNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/staticUserNameTextView"
            app:layout_constraintTop_toBottomOf="@id/dynamicUserEmailTextView"
            android:layout_marginStart="18dp"
            app:layout_constraintBottom_toBottomOf="@id/staticUserNameTextView"
            android:text="@{signUpViewModel.user.displayName}"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:hint="@string/example_user_hint"
            android:layout_marginTop="33dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="33dp"
            android:text="@string/sign_out"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>