<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/choiceChips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="24dp"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:padding="14dp"
        app:layout_constraintBottom_toTopOf="@id/total_balance_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/showAllTransactionChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:elevation="4dp"
            android:gravity="start"
            android:text="@string/all_transactions" />


        <com.google.android.material.chip.Chip
            android:id="@+id/showIncomesChip"
            style="@style/customChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/ins" />

        <com.google.android.material.chip.Chip
            android:id="@+id/showExpensesChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:gravity="end"
            android:text="@string/outs" />


    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_balance_textView"
        style="@style/TextAppearance.CustomBody2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choiceChips" />


    <!--this is the balance-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/balance_textView"
        style="@style/TextAppearance.CustomBody2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/test_value"
        android:rotationX="18"
        app:layout_constraintEnd_toEndOf="@id/total_balance_textView"
        app:layout_constraintStart_toStartOf="@id/total_balance_textView"
        app:layout_constraintTop_toBottomOf="@+id/total_balance_textView" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="14dp"
        android:background="@color/primaryColor"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/balance_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/transactionListTypeContainerTextView" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/transactionListTypeContainerTextView"
        style="@style/TextAppearance.CustomBody2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:elevation="4dp"
        android:text="@string/transactions"
        app:layout_constraintBottom_toTopOf="@id/refreshRecyclerview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshRecyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionListTypeContainerTextView">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transactionsRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_marginTop="24dp"
            android:elevation="4dp"
            android:paddingTop="35dp"
            android:paddingBottom="45dp"
            android:translationZ="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/balance_textView"
            tools:listitem="@layout/card_transactions" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/transaction_fab"
        style="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin_end_default"
        android:layout_marginBottom="@dimen/fab_margin_bottom_default"
        android:clickable="true"
        android:contentDescription="@string/extendable_fab_content_description"
        android:elevation="14dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:foregroundTint="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_transaction_fab"
        style="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin_end_default"
        android:layout_marginBottom="@dimen/additional_fab_end_margin"
        android:contentDescription="@string/creating_a_new_transaction_description"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/transaction_fab"
        app:layout_constraintEnd_toEndOf="@id/transaction_fab"
        app:srcCompat="@drawable/ic_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_transactions_fab"
        style="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin_end_default"
        android:layout_marginBottom="@dimen/additional_fab_end_margin"
        android:contentDescription="@string/edit_fab_content_description"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/create_transaction_fab"
        app:layout_constraintEnd_toEndOf="@id/create_transaction_fab"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/create_transaction_fab"
        app:srcCompat="@android:drawable/ic_menu_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>

